# MyOculusTest

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.c
app/src/main/cpp/openxr/: openxr.h  openxr_platform.h  openxr_platform_defines.h  openxr_reflection.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
